[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Font/CatChild_base_64.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scenes/Regles/Regles.gd" type="Script" id=2]
[ext_resource path="res://Assets/Font/CatChild_base_18.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/Font/CatChild_base_48.tres" type="DynamicFont" id=4]

[node name="Regles" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -4.495
margin_right = -4.495
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="HBoxContainer"]
margin_left = 190.0
margin_right = 1090.0
margin_bottom = 720.0
rect_min_size = Vector2( 900, 700 )
rect_clip_content = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -30.0
margin_bottom = 150.0
rect_min_size = Vector2( 900, 720 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator3" type="HSeparator" parent="HBoxContainer/Panel/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 900.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )

[node name="LabelTitre" type="Label" parent="HBoxContainer/Panel/VBoxContainer"]
margin_top = 34.0
margin_right = 900.0
margin_bottom = 113.0
custom_fonts/font = ExtResource( 1 )
text = "Règles"
align = 1
valign = 1

[node name="HBoxSfx" type="HBoxContainer" parent="HBoxContainer/Panel/VBoxContainer"]
margin_top = 117.0
margin_right = 900.0
margin_bottom = 117.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/Panel/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 121.0
margin_right = 900.0
margin_bottom = 126.0
rect_min_size = Vector2( 0, 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelText" type="Label" parent="HBoxContainer/Panel/VBoxContainer"]
margin_top = 130.0
margin_right = 900.0
margin_bottom = 699.0
rect_min_size = Vector2( 900, 400 )
custom_fonts/font = ExtResource( 3 )
text = "But du jeu :
 A chaque tour, un Conteur choisit secrètement une carte illustrée et lui associe un mot/phrase.
→ Les autres joueurs doivent, grâce à l’énigme du Conteur, retrouver la carte de ce dernier !
[!] Mais attention, si l’énigme est trop facile ou trop difficile, le Conteur ne marque aucun point !

Compte des points :
-Si tous les joueurs trouvent l’image du Conteur, l’énigme était alors trop évidente et le Conteur marque 0. Les autres joueurs marquent 2.
-Si aucun joueur ne trouve la bonne image, l’énigme était trop difficile et le Conteur marque 0 et les joueurs 2.
-Dans les autres cas (si quelques joueurs trouvent l’énigme), le Conteur ainsi que les Joueurs désignant la bonne carte marquent 3.
-Chaque Joueur ayant induit l’autre en erreur marque 1 (si quelqu’un vote à tort pour votre carte) par vote.

Les cartes bonus/malus:
-CARTE COMPTE DOUBLE : Reconnaissable grâce aux petites étoiles, lorsque vous la choisissez et que celle-ci vous rapporte des points, vous en gagnez 2 fois plus.
-CARTE POISON : Reconnaissable grâce aux petites tête de mort,, lorsque vous la choisissez vous perdez un point.
-CARTE \"ALCOOLISÉ\" : Reconnaissable grâce aux particules de bière, lorsque vous la choisissez tous les joueurs gagnent un gramme dans le sang et ont du mal à voir les cartes.
-CARTE \"MYSTÈRE\" : Reconnaissable grâce aux particules de point d'interrogation, une fois choisie, seul vous pouvez voir les cartes.
"
align = 1
autowrap = true

[node name="retourMenuCont" type="HBoxContainer" parent="HBoxContainer/Panel/VBoxContainer"]
margin_top = 703.0
margin_right = 900.0
margin_bottom = 703.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonFermer" type="Button" parent="."]
margin_left = 196.018
margin_top = 10.6787
margin_right = 276.018
margin_bottom = 90.6787
rect_min_size = Vector2( 80, 80 )
custom_fonts/font = ExtResource( 4 )
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ButtonFermer" to="." method="_on_ButtonFermer_pressed"]
